# controllers/Utilizador.js
@@ -6,11 +6,11 @@ var Utilizador = require('../service/UtilizadorService');
 module.exports.apagarUtilizador = function apagarUtilizador (req, res, next) {
   var username = req.swagger.params['username'].value;
   Utilizador.apagarUtilizador(username)
-    .then(function (response) {
-      utils.writeJson(res, response);
+    .then(function (response) { 
+      utils.writeJson(res, "Apagado", response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, "Utilizador não encontrado", response); 
     });
 };
 
@@ -19,10 +19,10 @@ module.exports.atualizarUtilizador = function atualizarUtilizador (req, res, nex
   var utilizador_ = req.swagger.params['utilizador_'].value;
   Utilizador.atualizarUtilizador(username,utilizador_)
     .then(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, "Atualizado", response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, "Utilizador não encontrado", response);
     });
 };
 
@@ -33,19 +33,18 @@ module.exports.buscarUtilizadorPeloNome = function buscarUtilizadorPeloNome (req
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res,"Utilizador não encontrado", response);
     });
 };
 
 module.exports.loginUtilizador = function loginUtilizador (req, res, next) {
-  var username = req.swagger.params['username'].value;
-  var password = req.swagger.params['password'].value;
-  Utilizador.loginUtilizador(username,password)
+  var login_ = req.swagger.params['login_'].value;
+  Utilizador.loginUtilizador(login_)
     .then(function (response) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res,"Erro!", response);
     });
 };
 
@@ -59,13 +58,23 @@ module.exports.logoutUtilizador = function logoutUtilizador (req, res, next) {
     });
 };
 
-module.exports.registarUtilizador = function registarUtilizador (req, res, next) {
-  var utilizador_ = req.swagger.params['utilizador_'].value;
-  Utilizador.registarUtilizador(utilizador_)
+module.exports.mostrarUtilizador = function mostrarUtilizador (req, res, next) {
+  Utilizador.mostrarUtilizador()
     .then(function (response) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
       utils.writeJson(res, response);
+    });
+};
+
+module.exports.registarUtilizador = function registarUtilizador (req, res, next) {
+  var utilizador_ = req.swagger.params['utilizador_'].value;
+  Utilizador.registarUtilizador(utilizador_)
+    .then(function (response) {
+      utils.writeJson(res,"Registado", response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res,"Erro", response);
     });
 };
